# emojiasm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: kb-research.md  kb.md
.github/workflows/: ci.yml  release.yml
benchmarks/: run.py  sum_n.c  sum_n.emoji  sum_n.js  sum_n.lua  sum_n.py  sum_n.rb  sum_n_runtime.c
docs/: GPU_FEASIBILITY.md  REFERENCE.md
editors/vscode/: language-configuration.json  package.json
emojiasm/: __init__.py  __main__.py  agent.py  bytecode.py  compiler.py  disasm.py  gpu.py  inference.py  opcodes.py  parser.py  repl.py  stats.py  transpiler.py  vm.py
emojiasm/metal/: __init__.py  vm.metal
examples/: fibonacci.emoji  fizzbuzz.emoji  functions.emoji  guess.emoji  hello.emoji  math.emoji  math_functions.emoji  monte_carlo_pi.emoji  string_ops.emoji
examples/modules/: main.emoji  math_lib.emoji
examples_py/: fibonacci.py  monte_carlo_pi.py
kb/: schema.sql  seed.sql  seed_language_ref.sql
scripts/: emoji_agent_runner.py  kb
specs/agent-mode/: research.md
specs/developer-experience/: .progress.md  .ralph-state.json  design.md  requirements.md  research-agent-runner.md  research.md  tasks.md
specs/python-transpiler/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
specs/tier1-numeric-ops/: .progress.md  design.md  requirements.md  research.md  tasks.md
specs/tier2-arrays/: .progress.md  tasks.md
tests/: test_agent.py  test_agent_runner.py  test_bytecode.py  test_cli.py  test_compiler.py  test_disasm.py  test_emojiasm.py  test_errors.py  test_gpu_kernel.py  test_inference.py  test_integration.py  test_mlx_backend.py  test_modules.py  test_output_buffer.py  test_parser.py  test_production.py  test_random.py  test_repl.py  test_stats.py  test_string_ops.py  test_transpiler.py  test_vm_control.py  test_vm_errors.py  test_vm_stack.py
(+12 files in other folders)
