[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "emojiasm"
version = "1.0.0"
description = "Assembly language made of pure emoji 🧬"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Patrick Kavanagh" }]
keywords = ["emoji", "assembly", "esoteric", "programming-language", "vm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Assemblers",
    "Programming Language :: Python :: 3",
]

[project.scripts]
emojiasm = "emojiasm.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
