[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emojiasm"
version = "1.0.0"
description = "Assembly language made of pure emoji 🧬"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Patrick Kavanagh" }]
keywords = ["emoji", "assembly", "esoteric", "programming-language", "vm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Assemblers",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["emojiasm*"]

[project.scripts]
emojiasm = "emojiasm.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
mypy_path = "emojiasm"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["emojiasm"]
omit = ["emojiasm/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
